--- a/components/about/about.module.css
+++ b/components/about/about.module.css
@@ -31,7 +31,7 @@
 
 .about__cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(, 1fr); */
   gap: 1.5rem;
 }
 
