--- a/components/layout/header.module.css
+++ b/components/layout/header.module.css
@@ -13,14 +13,14 @@
 /* ============== ME ============== */
 .me {
   background: linear-gradient(var(--color-primary), transparent);
-  width: 22rem;
-  height: 30rem;
+  width: 20rem;
+  height: 20rem;
   position: absolute;
-  left: calc(50% - 11rem);
+  left: calc(50% - 10rem);
   margin-top: 4rem;
-  border-radius: 12rem 12rem 0 0;
+  border-radius: 50%;
   overflow: hidden;
-  padding: 5rem 1.5rem 1.5rem 1.5rem;
+  padding: 5rem 0rem 0rem 0rem;
 }
 
 /* ============== CTA ============== */
