--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 /* google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
 /* Light 300, Regular 400, Medium 500, SemiBold 600 */
 
 * {
@@ -13,19 +15,24 @@
 }
 
 :root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
-
+  --color-bg: #2F3A47;
+  --color-bg-variant: #4A5C6B;
+  --color-primary: #B0B7BC;
+  --color-accent: #8E44AD;
+  --color-primary-variant: rgba(176, 183, 188, 0.4);
+  --color-white: #F4F6F7;
+  --color-light: rgba(244, 246, 247, 0.7);
+  
   --transition: all 400ms ease;
 
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
 }
+
+
+
+
 
 html {
   scroll-behavior: smooth;
@@ -36,10 +43,22 @@ html {
 }
 
 /* google fonts */
-body {
+/* body {
   font-family: 'Poppins', sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
+  line-height: 1.7;
+  background-image: url(../public/bg-texture.png);
+} */
+
+
+body {
+  background: var(--color-bg);
+  color: var(--color-white);
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
   line-height: 1.7;
   background-image: url(../public/bg-texture.png);
 }
@@ -74,6 +93,7 @@ section > h2 {
 
 .text-light {
   color: var(--color-light);
+  margin-bottom: 1rem;
 }
 
 a {
